tests/compile_fail/borrow/union.stderr
error: `Borrow` cannot be derived for unions
 --> tests/compile_fail/borrow/union.rs:2:1
  |
2 | union Foo {
  | ^^^^^
